@@ -2,6 +2,8 @@ package com.example.paymentservice.client;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.ArrayList;
+import java.util.Collections;
 
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
@@ -11,6 +13,10 @@ import org.springframework.web.client.RestTemplate;
 import com.example.paymentservice.dto.booking.BookingDTO;
 import com.example.paymentservice.dto.booking.UserBookingDTO;
 import com.example.paymentservice.exception.BookingClientException;
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 
 @Service
 public class BookingClient {
@@ -20,34 +26,66 @@ public class BookingClient {
     @Value("${booking.service.url}")
     private String bookingServiceUrl;
 
+    private final ObjectMapper mapper;
+
     public BookingClient(RestTemplate restTemplate) {
         this.restTemplate = restTemplate;
+        this.mapper = new ObjectMapper();
+        this.mapper.registerModule(new JavaTimeModule()); // Support for LocalDate / LocalDateTime
     }
 
+    /**
+     * Fetch a booking by ID
+     */
     public Optional<BookingDTO> getBookingById(Long bookingId) {
         try {
-            BookingDTO booking = restTemplate.getForObject(
+            String responseStr = restTemplate.getForObject(
                     bookingServiceUrl + "/bookings/" + bookingId,
-                    BookingDTO.class);
-            return Optional.ofNullable(booking);
+                    String.class);
+
+            JsonNode dataNode = mapper.readTree(responseStr).path("data");
+            if (dataNode.isMissingNode() || dataNode.isNull()) {
+                return Optional.empty();
+            }
+
+            BookingDTO booking = mapper.treeToValue(dataNode, BookingDTO.class);
+            return Optional.of(booking);
+
         } catch (HttpClientErrorException.NotFound e) {
-            return Optional.empty(); // Booking not found is fine
+            return Optional.empty();
         } catch (Exception e) {
-            throw new BookingClientException("Failed to fetch booking with ID: " + bookingId, e);
+            throw new BookingClientException(
+                    "Failed to fetch booking with ID: " + bookingId + ". Response: " + e.getMessage(), e);
         }
     }
 
+    /**
+     * Fetch bookings for a user
+     */
     public List<UserBookingDTO> getBookingsByUserId(Long userId) {
         try {
-            UserBookingDTO[] bookings = restTemplate.getForObject(
+            // Call the booking service
+            String responseStr = restTemplate.getForObject(
                     bookingServiceUrl + "/bookings/user/" + userId,
-                    UserBookingDTO[].class);
-            return bookings != null ? List.of(bookings) : List.of();
+                    String.class);
+
+            // Map the "data" array directly into List<UserBookingDTO>
+            return mapper.readValue(
+                    mapper.readTree(responseStr).path("data").toString(),
+                    new TypeReference<List<UserBookingDTO>>() {
+                    });
+
+        } catch (HttpClientErrorException.NotFound e) {
+            return Collections.emptyList();
         } catch (Exception e) {
-            throw new BookingClientException("Failed to fetch bookings for user ID: " + userId, e);
+            throw new BookingClientException(
+                    "Failed to fetch bookings for user ID: " + userId + ". " + e.getMessage(), e);
         }
     }
 
+    /**
+     * Update booking status
+     */
     public void updateBookingStatus(Long bookingId, String status) {
         try {
             restTemplate.postForEntity(
@@ -60,7 +98,9 @@ public class BookingClient {
                             + ")",
                     e);
         } catch (Exception e) {
-            throw new BookingClientException("Failed to update booking status for booking ID: " + bookingId, e);
+            throw new BookingClientException(
+                    "Failed to update booking status for booking ID: " + bookingId + ". " + e.getMessage(),
+                    e);
         }
     }
 }
